<resources>
    <string name="app_name">Pixelmaler</string>
    <string name="title_activity_editor">Pixelmaler: Editor</string>

    <string name="contextmenu_remove">Remove</string>
    <string name="contextmenu_change">Change</string>

    <string name="action_clear">Clear</string>
    <string name="action_fill">Fill</string>
    <string name="action_reset">Reset</string>
    <string name="action_remove">Remove</string>
    <string name="action_mapsize">Map size</string>
    <string name="action_draw">Draw</string>
    <string name="action_tweezers">Find Color</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="text_na">N/A</string>

    <string name="text_close">Close</string>
    <string name="text_no_images">There are no saved images!</string>
    <string name="text_color_selector_button_not_selected" />
    <string name="text_color_selector_button_selected">X</string>

    <string name="share_intent_type">image/jpeg</string>
    <string name="dialog_share_image_title">Share image with…</string>

    <string name="dialog_delete_confirm_yes">Yes, delete!</string>
    <string name="dialog_delete_confirm_title">Are you sure you want to delete this image?</string>
    <string name="dialog_delete_confirm_no">No, keep it!</string>

    <string name="dialog_reset_title">Are you sure you want to reset your editor?</string>
    <string name="dialog_reset_yes">Yes, reset it!</string>
    <string name="dialog_reset_no">No, I am not sure what I am doing!</string>

    <string name="dialog_save_body">Saving image…</string>
    <string name="dialog_save_title">Pixel Maler</string>
    <string name="dialog_save_successful">Successfully saved image</string>
    <string name="dialog_save_failed">Failed to save image!</string>

    <string name="dialog_select_picture">Select Picture</string>

    <string name="dialog_processing_image_successful">Image successfully processed!</string>
    <string name="dialog_processing_image_failed">Could not process the image!</string>
    <string name="dialog_processing_image_title">Processing Image</string>
    <string name="dialog_processing_image_body">Loading please wait…</string>

    <string name="dialog_fill_canvas_title">Performing Action</string>
    <string name="dialog_fill_canvas_body">Please wait…</string>
    <string name="action_undo">Undo</string>
    <string name="dialog_undo_successful">Successfully undone!</string>
    <string name="dialog_undo_failed">Cannot go further back!</string>
    <string name="action_log">Log</string>
    <string name="dialog_log_body">"The current map size is bigger than by default suggested, the following action might not work. "</string>
    <string name="dialog_log_title">Map Size</string>
    <string name="dialog_log_ok">Ok, try anyways!</string>
    <string name="dialog_log_no">No, I am scared!</string>
</resources>
