<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.EditorActivity">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/undo_white"
        android:orderInCategory="80"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/save_white"
        android:orderInCategory="90"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_log"
        android:icon="@drawable/log_white"
        android:orderInCategory="100"
        android:title="@string/action_log"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mapsize"
        android:orderInCategory="100"
        android:title="@string/action_mapsize"
        app:showAsAction="never" />
</menu>
